<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:fitsSystemWindows="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/ivBack"
                    android:layout_marginStart="@dimen/margin_14"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/tvToolbarTitle"
                    android:textAppearance="@style/toolbarText"
                    android:layout_marginStart="@dimen/margin_27"
                    android:layout_toEndOf="@+id/ivBack"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/slate"
                    android:text="@string/app_title"/>

            <TextView
                    android:id="@+id/tvPostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white_two"
                    android:text="@string/text_sub_title"
                    tools:ignore="RelativeOverlap"/>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/appbar"
            android:id="@+id/tvPollContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/margin_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:maxLines="1"
            android:hint="@string/placeholder_edit_poll"
            android:background="@android:color/transparent"
            android:textColor="@color/warm_grey"
            android:textColorHint="@color/warm_grey"
            android:lineSpacingExtra="@dimen/margin_2"
            app:layout_constraintBottom_toTopOf="@id/rlOptionsHolder"
            tools:ignore="Autofill,LabelFor,TextFields"/>

    <RelativeLayout
            android:id="@+id/rlOptionsHolder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_11"
            android:layout_marginStart="@dimen/margin_11"
            app:layout_constraintTop_toBottomOf="@id/tvPollContent"
            android:layout_marginTop="@dimen/margin_38"
            android:background="@drawable/bg_rectangle_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/llOptionHolder"
                android:layout_marginEnd="@dimen/margin_42"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:orientation="horizontal"
                android:background="@drawable/bg_rectangle_round_small_orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:paddingBottom="@dimen/margin_14"
                    android:paddingTop="@dimen/margin_14"
                    android:paddingEnd="@dimen/margin_36"
                    android:paddingStart="@dimen/margin_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:layout_weight="1"
                    android:textColor="@color/warm_grey"
                    android:text="@string/placeholder_option_1"/>

            <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_10"
                    android:textColor="@color/white_two"
                    android:gravity="end"
                    android:paddingStart="@dimen/margin_12"
                    android:paddingEnd="@dimen/margin_12"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin_12"
                    android:paddingBottom="@dimen/margin_11"
                    android:text="@string/placeholder_option_no"/>

        </LinearLayout>


        <RelativeLayout
                android:layout_below="@+id/llOptionHolder"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tvOption2"
                    android:layout_marginEnd="@dimen/margin_42"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_16"
                    android:background="@drawable/bg_rectangle_round_small_grey"
                    android:paddingBottom="@dimen/margin_14"
                    android:paddingTop="@dimen/margin_14"
                    android:paddingEnd="@dimen/margin_36"
                    android:paddingStart="@dimen/margin_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/warm_grey"
                    android:text="@string/placeholder_option_2"/>

            <ImageView
                    android:id="@+id/ivAddMore"
                    android:layout_marginTop="@dimen/margin_11"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_11"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_action_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlOptionsHolder"
            android:layout_margin="@dimen/margin_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/warm_grey"
            android:text="@string/placeholder_poll_time"/>

</android.support.constraint.ConstraintLayout>